# rust-command-line-apps

./: LICENSE  README.md
catr/: Cargo.toml  mk-outs.sh
catr/src/: lib.rs  main.rs
catr/tests/: cli.rs
catr/tests/expected/: all.E.out  all.bE.out  fox.txt.E.out  spiders.txt.E.out  the-bustle.txt.E.stdin.out
echor/src/: main.rs
echor/tests/: cli.rs
headr/: Cargo.toml
headr/src/: lib.rs  main.rs
hello/: Cargo.toml
wcr/: Cargo.toml  lib.rs.bak
wcr/src/: lib.rs  main.rs
wcr/tests/: cli.rs
wcr/tests/expected/: all.c.out  all.cl.out  all.l.out  all.lwm.out  all.m.out  all.ml.out  all.out  all.w.out  all.wc.out  all.wl.out  all.wm.out  atlamal.txt.c.out  atlamal.txt.cl.out  atlamal.txt.l.out  atlamal.txt.lwm.out  atlamal.txt.m.out  atlamal.txt.ml.out  atlamal.txt.out  atlamal.txt.stdin.out  atlamal.txt.w.out  atlamal.txt.wc.out  atlamal.txt.wl.out  atlamal.txt.wm.out  empty.txt.l.out  empty.txt.ml.out  empty.txt.out  fox.txt.c.out  fox.txt.l.out  fox.txt.ml.out  fox.txt.out  fox.txt.w.out  fox.txt.wc.out  fox.txt.wl.out
