[package]
name = "catr"
version = "0.2.0"
edition = "2021"
authors = ["Simon Weiß"]
descriptions = "Incomplete `GNU cat` in Rust for learning purposes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0.8"
