[package]
name = "wcr"
author = "Simon Weiß"
description = "wc implemented in rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"]}

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0.8"
